Fixed icon spacing and about me scroll

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   11. Goodbye
   12. Animmations (chevron pulse)
   13. Helper styles (skrollr helper)
+  14. Navigation
 */
 
 
@@ -81,6 +82,10 @@ html, body {
   margin: 0 auto;
   width: 50px;
   height: auto;
+}
+
+.connectBody .svgIcon {
+  margin-left: 20px;
 }
 
 .projectTop img {
@@ -296,7 +301,7 @@ a:hover {
   height: 50vh;
   position: fixed;
   bottom: 0px;
-  /*overflow-y: auto;*/
+  overflow-y: auto;
 }
 
 
@@ -529,6 +534,22 @@ a:hover {
   background-color: black;
 }
 
+/*///////////////////////////////////////////////////////////////////////////////////////////*/
+  /* 14. NAVIGATION*/
+/*///////////////////////////////////////////////////////////////////////////////////////////*/
 
+#navigation {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  height: 20vh;
+  width: 33vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999999;
+}
 
-
+@media (max-width: 600px) {
+  #navigation {
+    display: none;
+  }
+}
